--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-async-storage/async-storage": "^1.15.16",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/material-top-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "expo": "~44.0.0",
@@ -29,10 +30,12 @@
     "react-native-gesture-handler": "^2.1.0",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-navigation": "^7.25.0",
+    "react-native-pager-view": "5.4.9",
     "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-svg": "^12.1.1",
+    "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1"
   },
