チャットリスナーできた

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
       "cwd": "${workspaceFolder}",
       "type": "reactnative",
       "request": "attach",
-      "port": "19000"
+      "port": 19001
     }
   ]
 }
