--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@react-navigation/material-top-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
+    "date-fns": "^2.28.0",
+    "date-fns-tz": "^1.3.0",
     "expo": "~44.0.0",
     "expo-image-picker": "^12.0.1",
     "expo-permissions": "^13.1.0",
